--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-selenium
-langchain
-langchain_community
-langchain_openai
-dotenv
-load_dotenv
-openai
-fastapi
-pydantic
-uvicorn
-flake8
+fastapi==0.112.2
+flake8==7.1.1
+langchain==0.2.14
+langchain-community==0.2.12
+langchain-openai==0.1.22
+load-dotenv==0.1.0
+openai==1.42.0
+pydantic==2.8.2
+python-dotenv==1.0.1
+selenium==4.23.1
+uvicorn==0.30.6
+webdriver-manager==4.0.2
